Fix spacing and add gradient to the index file

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 html {
-  font-family: "Georgia", serif;
+  font-family: Georgia, serif;
 }
 
-.grid {
+.banner-content {
   color: #efefef;
   background-color: #495562;
+  width: 100%;
 }
 
 .btn {
@@ -14,22 +15,25 @@ html {
 
 @media only screen and (min-width: 60em) {
 
-  .grid {
+  .banner-content {
     color: #fff;
     background-color: transparent;
-    position: relative;
-    top: -300px;
-  }
-
-  .banner {
     position: absolute;
+    bottom: 0;
+    background-image: linear-gradient(to bottom, rgba(73, 85, 98, 0), rgba(73, 85, 98, .9));
   }
 
-  img {
-    background-image: linear-gradient ();
-  }
   .banner {
+    position: relative;
     max-height: 500px;
+  }
+
+  .btn {
+    border-color: #fff;
+  }
+
+  .button {
+    text-align: right;
   }
 
 }
